--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mercadopago/sdk-js": "^0.0.3",
+    "@vimeo/player": "^2.20.1",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "mitt": "^3.0.1",
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.4",
+    "vue-star-rating": "^2.1.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
