--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vimeo/player": "^2.20.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.5",
     "mitt": "^3.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4",
